# fenster

./: .gitignore  LICENSE.md  README.md  client.http  config.toml
backend/: .env  .example.env  Cargo.toml  example.config.toml
backend/.sqlx/: query-0086f40d8a3c7183d117684a207e113cdafa49484e06371afbf5b60717670513.json  query-188b7edc874e9c0be18abf90a6e9e98236093d091ae88a80d2f8535fba858569.json  query-1f3795e21835a00669826c9d2755a399639efad7a174c35c310f9e39c2c97723.json  query-3016421a7df305d0244550b67aecea6068b8f2188b2601b1232187990dab381f.json  query-50574c991a51861cce4a6abc6610f2138ce702779fd08ca86485dce16fdce6ff.json  query-63edafc6952acada8e2ddc61bc9056603ff8d1eef9dedea8d2539b7955327dca.json  query-86415cb91a290f3b65548ea83fa75808074555f4e41e4f344b3b8f716eaad16f.json  query-a0992905dbf0516a93f63ceec4750fb193f34fa2fe11cf430ceeb1cea4bbc464.json  query-b9cc03b374199b5bec659db061561ef8078ac6ffe6d8e3c2e784c1a5dd019fbf.json  query-e42201303f6aa4334fdad1dbab266d6fa93fbf30506421a50688195d9fb4ef26.json  query-fc77e3fdef4cd1e3662ff1032e3c380f8332eb869b9eac41708b3348edee8b8e.json
backend/migrations/: 20240614121357_users.sql  20240614121402_articles.sql
backend/src/: backend_config.rs  fenster_error.rs  main.rs
backend/src/article/: article_entity.rs  article_handler.rs  mod.rs
backend/src/auth/: auth_handler.rs  mod.rs  token_entity.rs
backend/src/authentication/: mod.rs  token.rs
backend/src/config/: mod.rs
backend/src/connections/: mod.rs
backend/src/entities/: article.rs  mod.rs  user.rs
backend/src/handlers/: articles.rs  auth.rs  mod.rs  root.rs  (+1 more)
(+12 files in other folders)
